--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="installer" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\install-interception.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="ashlogo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ashlogo.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
